--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h3{
 }
 
 p{
-  font-size: 20px;
+  font-size: 125%;
   text-align: center;
 }
 
@@ -67,7 +67,7 @@ body{
   cursor: pointer;
   display: inline-block;
   font-family: vidaloka;
-  font-size: 20px;
+  font-size: 125%;
   margin: 4px 2px;
   padding: 16px 32px;
   text-align: center;
