--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h1 {
   color: #545454;
   text-align: center;
-  text-shadow: 12.5% 12.5% 12.5% rgba(0,0,0,.5)
+  text-shadow: 2px 2px 2px rgba(0,0,0,.5)
 }
 
 h2{
