--- a/style.css
+++ b/style.css
@@ -20,7 +20,10 @@ p{
 body{
   background-image: url('https://upload.wikimedia.org/wikipedia/commons/f/fb/John_Constable_-_Cloud_Study_-_Google_Art_Project.jpg');
   background-repeat: no-repeat;
-  background-size: 100% auto;
+  -webkit-background-style: cover;
+  -moz-background-style: cover;
+  -o-background-size: cover;
+  background-size: cover;
   font-family: vidaloka;
   text-align: center;
 }
