--- a/style.css
+++ b/style.css
@@ -20,8 +20,7 @@ p{
 body{
   background-image: url('https://upload.wikimedia.org/wikipedia/commons/f/fb/John_Constable_-_Cloud_Study_-_Google_Art_Project.jpg');
   background-repeat: no-repeat;
-  background-size: 1000px 1000px;
-  min-height: 100%;
+  background-size: 100vw 100vh;
   font-family: vidaloka;
   text-align: center;
 }
