--- a/style.css
+++ b/style.css
@@ -86,6 +86,27 @@ body{
   color: white;
 }
 
+.html-mobile-background {
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 125%; /* To compensate for mobile browser address bar space */
+  background: url('https://upload.wikimedia.org/wikipedia/commons/f/fb/John_Constable_-_Cloud_Study_-_Google_Art_Project.jpg') no-repeat; 
+  background-size: 100% 100%;
+}
+
+@media (min-width: 600px) {
+  html {
+      background: url('https://upload.wikimedia.org/wikipedia/commons/f/fb/John_Constable_-_Cloud_Study_-_Google_Art_Project.jpg') no-repeat center center fixed; 
+      background-size: cover;
+  }
+  .html-mobile-background {
+      display: none;
+  }
+}
+
 @font-face {
   font-family: vidaloka;
   src: url(Vidaloka-Regular.ttf);
